# atlassian-browser-mcp

./: .coderabbit.yaml  .gitignore  AGENTS.md  CLAUDE.md  README.md  SECURITY.md  atlassian-cli  atlassian_browser_auth.py  atlassian_browser_mcp_full.py  atlassian_cli.py  glama.json  pyproject.toml  run-atlassian-browser-mcp.sh
.github/: dependabot.yml
.github/workflows/: track-upstream.yml
