[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "atlassian-browser-mcp"
version = "1.0.0"
description = "Browser-backed MCP server wrapping upstream mcp-atlassian with Playwright SSO auth"
requires-python = ">=3.12"
dependencies = [
    "mcp-atlassian~=0.21.1",
    "playwright>=1.40",
    "requests>=2.31",
]

[project.scripts]
atlassian-browser-mcp = "atlassian_browser_mcp_full:main"

[tool.setuptools]
py-modules = ["atlassian_browser_auth", "atlassian_browser_mcp_full"]
